# node-manager

./: README.md  index.html  package-lock.json  package.json
scripts/: release.mjs
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_config.rs  downloads.rs  lib.rs  main.rs  node_manager.rs
