[package]
name = "node-manager"
version = "0.1.2"
description = "Node Manager GUI"
authors = ["Pablo Medina"]
license = "MIT"
repository = "https://github.com/pablo-medina/node-manager"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "node_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
dirs = "6.0.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
sha2 = "0.10.9"
walkdir = "2.5.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "fs", "io-util"] }
tokio-util = "0.7.14"
futures-util = "0.3"
zip = "0.6.6"
tar = "0.4.44"
xz2 = "0.1.7"
